--- a/07/02-CSS的元素显示模式.html
+++ b/07/02-CSS的元素显示模式.html
@@ -15,5 +15,41 @@
 <!-- 
     元素显示模式：
         1、定义：（元素种类不同），所以元素（标签）以什么方式进行显示也不同
-        2、
+        2、HTML一般分为块元素和行内元素 
+        3、块元素：
+            特点：
+                独占一行；
+                height,width,内外边距都是可以控制的；
+                宽度默认是父级容器的100%；
+                是一个容器及盒子，里面可以放行内或者块级元素；
+            如：<h1>~<h6> <p> <div> <ul> <ol> <li>
+            注意：
+                文字类的元素内不能使用块级标签
+                <p>主要存放文字，而不是<div>之类的块级元素
+                同样，文字类块级标签也是
+        4、行内元素：
+            特点：
+                相邻的行内元素在一行上，一行可以显示多个
+                高、宽直接设置是无效的
+                默认宽度就是其本身内容的宽度
+                行内元素只能容纳文本或者其他行内元素
+            如：<a> <strong> <b> <em> <i> <del> <s> <ins> <u> <span>
+                内联元素
+            注意：链接里面不能再放链接；
+                  特殊情况下<a>里面可以放块级元素，但是给<a>转换一下块级模式最安全
+        5、行内块元素：
+            同时具有块元素和行内元素的特点，又称为行内块元素
+
+            特点：
+                和相邻行内元素（行内块）在一行上，但是之间会存在空白间隙。一行可以显示多个
+                默认宽度是其本身内容的宽度（行内元素特点）
+                高度，行高，外边距都是可以控制的
+             如：<img/> <input /> <td>
+        6、元素显示模式转换：
+            一个模式的元素需要另一个模式的特性
+            xxx->块级元素: display:block
+            xxx->行内元素：display:inline
+            xxx->行内块元素：display:inline-block
+
+
  -->
